--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ body {
   align-items: center;
   color: #fff;
   height: 94px;
-  position: relative;
+  position: fixed;
+  width: 100%;
   border-bottom: 1px solid rgba(235, 235, 240, 0.2);
 }
 .header {
@@ -86,6 +87,7 @@ body {
 }
 .navbar-button {
   flex-shrink: 0;
+  height: 100%;
 }
 .header-button {
   height: 100%;
@@ -136,4 +138,70 @@ body {
 }
 .header-features-item:not(:last-child) {
   border-right: none;
+}
+.section {
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+.section-title {
+  font-family: "Bebas Neue Book";
+  font-size: 60px;
+  line-height: 120%;
+  color: #292d33;
+}
+.steps {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  gap: 30px;
+}
+.steps-item {
+  min-width: 330px;
+}
+.steps-num {
+  font-family: "Bebas Neue Book";
+  font-size: 48px;
+  line-height: 120%;
+  color: #5c8ee6;
+  display: flex;
+  align-items: center;
+}
+.steps-num:after {
+  content: "";
+  height: 1px;
+  background: #ebebf0;
+  width: 100%;
+  display: inline-block;
+  margin-left: 30px;
+}
+.steps-title {
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 160%;
+  color: #292d33;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.steps-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+  color: #828a99;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+.steps-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 160%;
+  color: #5c8ee6;
+}
+.steps-link:before {
+  content: "";
+  height: 1px;
+  background: #5c8ee6;
+  width: 40px;
 }
