fix: navbar position

--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,13 @@ body {
   height: 94px;
   position: fixed;
   width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 2;
   border-bottom: 1px solid rgba(235, 235, 240, 0.2);
 }
 .header {
+  padding: 94px;
   min-height: 100vh;
 }
 .header-image {
