--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+html {
+  font-size: 16px;
+}
 @font-face {
   font-family: "Bebas Neue Book";
   src: url("../fonts/BebasNeueBook.woff") format("woff");
@@ -11,15 +14,18 @@
 body {
   font-family: "Noto Sans", sans-serif;
 }
+.mobile-menu {
+  display: none;
+}
 .container {
-  max-width: 1440px;
+  max-width: 90rem;
   margin: auto;
 }
 .navbar {
   display: flex;
   align-items: center;
   color: #fff;
-  height: 94px;
+  height: 5.875rem;
   position: fixed;
   width: 100%;
   left: 0;
@@ -31,20 +37,27 @@ body {
 .navbar-light {
   background: #fff;
   color: #292d33;
-  height: 74px;
+  height: 4.5rem;
+}
+.phone-icon {
+  fill: #5c8ee6;
+}
+.logo-svg {
+  width: 9rem;
+  height: 2.75rem;
 }
 .navbar-light .header-logo-path {
   fill: #292d33;
 }
 .header {
-  padding: 94px;
+  padding: 5.875rem;
   min-height: 100vh;
 }
 .header-image {
   background-image: url(../img/header-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center bottom -3.4375rem;
   position: relative;
 }
 .header-image:after {
@@ -60,7 +73,7 @@ body {
 .header-logo {
   display: flex;
   align-items: center;
-  padding: 0px 50px;
+  padding: 0rem 3.125rem;
   border-right: 1px solid rgba(235, 235, 240, 0);
   height: 100%;
 }
@@ -68,34 +81,37 @@ body {
   flex-basis: 100%;
   display: flex;
   list-style: none;
-  padding: 0 50px;
+  padding: 0;
+  padding-left: 3.125rem;
   margin: 0;
+}
+.header-nav-item:not(:last-child) {
+  margin-right: 4%;
 }
 .header-nav-link {
   text-decoration: none;
-  font-size: 16px;
-  margin-right: 50px;
+  font-size: 1rem;
   color: inherit;
 }
 .header-phone {
   flex-shrink: 0;
   display: flex;
   align-items: center;
-  gap: 10px;
-  margin-right: 50px;
+  gap: 0.625rem;
+  margin-right: 3.125rem;
 }
 .header-phone-link {
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1rem;
   color: inherit;
 }
 .button {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 160%;
   color: #fff;
   background: #3a71d1;
-  padding: 25px 60px;
+  padding: 1.5625rem 3.75rem;
   border: none;
   display: inline-block;
   cursor: pointer;
@@ -103,64 +119,76 @@ body {
 .navbar-button {
   flex-shrink: 0;
   height: 100%;
+  padding: 1.5625rem 3.125rem;
+}
+.navbar-button .button-icon {
+  display: none;
 }
 .header-button {
   height: 100%;
 }
 .seporator {
   background: #5c8ee6;
-  width: 150px;
-  height: 2px;
+  width: 9.375rem;
+  height: 0.125rem;
 }
 .header-content {
-  padding-top: 150px;
+  padding-top: 9.375rem;
   position: relative;
   z-index: 1;
   color: #fff;
 }
 .header-title {
-  max-width: 1080px;
+  max-width: 67.5rem;
   font-family: "Bebas Neue Book";
-  font-size: 80px;
-  line-height: 120px;
-  margin: 30px 0;
+  font-size: 5rem;
+  line-height: 7.5rem;
+  margin: 1.875rem 0;
+  letter-spacing: 0.8px;
+  word-spacing: -1.6px;
 }
 .header-text {
-  max-width: 720px;
+  max-width: 45rem;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 160%;
-  margin-bottom: 50px;
+  margin-bottom: 3.125rem;
 }
 .header-features {
   display: flex;
-  min-height: 160px;
+  min-height: 10.5rem;
   padding: 0;
-  margin-top: 100px;
+  margin-top: 6.25rem;
   list-style: none;
   color: #fff;
   position: relative;
 }
 .header-features-item {
-  padding: 30px 50px;
+  padding: 1.75rem 3.125rem;
+  width: 18rem;
   border: 1px solid rgba(235, 235, 240, 0.2);
+}
+.header-button {
+  padding: 1.625rem 3.75rem;
 }
 .header-features-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 160%;
+  margin-bottom: 0;
+  margin-top: 1.125rem;
 }
 .header-features-item:not(:last-child) {
   border-right: none;
 }
 .section {
-  margin-top: 150px;
-  margin-bottom: 150px;
+  margin-top: 9.375rem;
+  margin-bottom: 9.375rem;
 }
 .section-title {
   font-family: "Bebas Neue Book";
-  font-size: 60px;
+  font-size: 3.75rem;
   line-height: 120%;
   color: #292d33;
 }
@@ -168,14 +196,14 @@ body {
   display: flex;
   list-style: none;
   padding: 0;
-  gap: 30px;
+  gap: 1.875rem;
 }
 .steps-item {
-  min-width: 330px;
+  min-width: 20.625rem;
 }
 .steps-num {
   font-family: "Bebas Neue Book";
-  font-size: 48px;
+  font-size: 3rem;
   line-height: 120%;
   color: #5c8ee6;
   display: flex;
@@ -183,40 +211,205 @@ body {
 }
 .steps-num:after {
   content: "";
-  height: 1px;
+  height: 0.0625rem;
   background: #ebebf0;
   width: 100%;
   display: inline-block;
-  margin-left: 30px;
+  margin-left: 1.875rem;
 }
 .steps-title {
   font-weight: 400;
-  font-size: 28px;
+  font-size: 1.75rem;
   line-height: 160%;
-  color: #292d33;
-  margin-top: 30px;
-  margin-bottom: 10px;
+  color: hsl(216, 11%, 18%);
+  margin-top: 1.875rem;
+  margin-bottom: 0.625rem;
 }
 .steps-text {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 160%;
   color: #828a99;
-  margin-bottom: 20px;
-  margin-top: 10px;
+  margin-bottom: 1.25rem;
+  margin-top: 0.625rem;
 }
 .steps-link {
   display: flex;
   align-items: center;
   text-decoration: none;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 160%;
   color: #5c8ee6;
 }
 .steps-link:before {
   content: "";
-  height: 1px;
+  height: 0.0625rem;
   background: #5c8ee6;
-  width: 40px;
+  width: 2.5rem;
+}
+@media (max-width: 1700px) {
+  html {
+    font-size: 14px;
+  }
+  .header-image {
+    background-position: center;
+  }
+}
+@media (max-width: 1460px) {
+  html {
+    font-size: 13px;
+  }
+  .header-logo {
+    padding: 2rem;
+  }
+  .logo-svg {
+    max-width: 6rem;
+  }
+  .header-nav {
+    padding-left: 2rem;
+  }
+  .header-nav-item:not(:last-child) {
+    margin-right: 1rem;
+  }
+  .header-phone {
+    margin-right: 2rem;
+  }
+}
+@media (max-width: 1200px) {
+  .container {
+    max-width: 70rem;
+  }
+  .header-phone {
+    display: none;
+  }
+  .navbar {
+    height: 5rem;
+  }
+  .navbar-button {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+@media (max-width: 992px) {
+  html {
+    font-size: 12px;
+  }
+  .container {
+    max-width: 60rem;
+  }
+  .header-nav {
+    display: none;
+  }
+  .header-logo {
+    flex-grow: 1;
+    justify-content: center;
+  }
+  .mobile-menu-toggle {
+    width: 80px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 1.8rem;
+    border-right: 1px solid rgba(235, 235, 240, 0.2);
+  }
+  .navbar-light .mobile-menu-line {
+    background-color: #333;
+  }
+  .mobile-menu-line {
+    height: 1px;
+    background-color: #fff;
+    width: 100%;
+  }
+  .mobile-menu-line:nth-child(2) {
+    width: 80%;
+  }
+  .navbar-button .button-text {
+    display: none;
+  }
+  .navbar-button .button-icon {
+    display: block;
+    fill: #fff;
+  }
+  .mobile-menu {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    z-index: 2px;
+    background-color: #fff;
+    padding-top: 5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  .mobile-menu.is-open {
+    display: block;
+  }
+  .mobile-menu-nav {
+    list-style: none;
+    padding: 0;
+  }
+  .mobile-menu-nav-item {
+    padding-bottom: 2rem;
+  }
+  .mobile-menu-link {
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 160%;
+    color: #292d33;
+  }
+  .mobile-submenu {
+    list-style: none;
+    padding: 0;
+    padding-left: 1rem;
+    margin-top: 1rem;
+  }
+  .mobile-submenu-link {
+    text-decoration: none;
+    color: #828a99;
+    font-size: 14px;
+    line-height: 160;
+  }
+  .mobile-phone {
+    display: block;
+    text-decoration: underline;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 160%;
+    color: #292d33;
+    border-top: 1px solid #ebebf0;
+    padding-top: 2rem;
+    margin-bottom: 1.5rem;
+  }
+  .mobile-info {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+  .mobile-info-address,
+  .mobile-info-email .mobile-info-vk {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 160%;
+    color: #292d33;
+  }
+  .mobile-info-instagram {
+    flex-direction: row;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 160%;
+    color: #292d33;
+  }
 }
