--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,7 @@ body {
     height: 1px;
     background-color: #fff;
     width: 100%;
+    transition: transform 0.2s;
   }
   .mobile-menu-line:nth-child(2) {
     width: 80%;
@@ -395,7 +396,7 @@ body {
     margin-top: 1rem;
   }
   .mobile-info-address,
-  .mobile-info-email .mobile-info-vk {
+  .mobile-info-email .mobile-info- .mobile-info-instagram {
     text-decoration: none;
     font-style: normal;
     font-weight: 400;
@@ -403,13 +404,13 @@ body {
     line-height: 160%;
     color: #292d33;
   }
-  .mobile-info-instagram {
-    flex-direction: row;
-    text-decoration: none;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 160%;
-    color: #292d33;
+  .close-menu .mobile-menu-line:nth-child(2) {
+    display: none;
+  }
+  .close-menu .mobile-menu-line:nth-child(1) {
+    transform: rotate(45deg) translateY(9px);
+  }
+  .close-menu .mobile-menu-line:nth-child(3) {
+    transform: rotate(-45deg) translateY(-9px);
   }
 }
