--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,6 @@ body {
     fill: #fff;
   }
   .mobile-menu {
-    display: block;
     position: fixed;
     top: 0;
     right: 0;
@@ -342,8 +341,8 @@ body {
     bottom: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
-    z-index: 2px;
+    overflow-y: auto;
+    z-index: 2;
     background-color: #fff;
     padding-top: 5rem;
     padding-left: 1.5rem;
@@ -376,7 +375,7 @@ body {
     text-decoration: none;
     color: #828a99;
     font-size: 14px;
-    line-height: 160;
+    line-height: 160%;
   }
   .mobile-phone {
     display: block;
@@ -393,16 +392,22 @@ body {
     display: flex;
     align-items: center;
     gap: 1rem;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
   }
   .mobile-info-address,
-  .mobile-info-email .mobile-info- .mobile-info-instagram {
+  .mobile-info-email {
     text-decoration: none;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 160%;
     color: #292d33;
+  }
+  .network-info {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    margin-bottom: 1rem;
   }
   .close-menu .mobile-menu-line:nth-child(2) {
     display: none;
