--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ body {
 }
 .header {
   padding: 5.875rem;
-  min-height: 100vh;
 }
 .header-image {
   background-image: url(../img/header-bg.png);
@@ -142,7 +141,7 @@ body {
   max-width: 67.5rem;
   font-family: "Bebas Neue Book";
   font-size: 5rem;
-  line-height: 7.5rem;
+  line-height: 120%;
   margin: 1.875rem 0;
   letter-spacing: 0.8px;
   word-spacing: -1.6px;
@@ -166,8 +165,23 @@ body {
 }
 .header-features-item {
   padding: 1.75rem 3.125rem;
+  min-height: 100%;
   width: 18rem;
   border: 1px solid rgba(235, 235, 240, 0.2);
+}
+.slider-buttons {
+  display: none;
+  height: 44px;
+}
+.slider-button-prev,
+.slider-button-next {
+  height: 100%;
+  flex-basis: 50%;
+  border: 1px solid rgba(235, 235, 240, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 .header-button {
   padding: 1.625rem 3.75rem;
@@ -178,9 +192,6 @@ body {
   line-height: 160%;
   margin-bottom: 0;
   margin-top: 1.125rem;
-}
-.header-features-item:not(:last-child) {
-  border-right: none;
 }
 .section {
   margin-top: 9.375rem;
@@ -289,6 +300,9 @@ body {
   .navbar-button {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+  .slider-buttons {
+    display: flex;
   }
 }
 @media (max-width: 992px) {
@@ -417,5 +431,27 @@ body {
   }
   .close-menu .mobile-menu-line:nth-child(3) {
     transform: rotate(-45deg) translateY(-9px);
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 40rem;
+  }
+  .header-title {
+    font-size: 4rem;
+  }
+  .header-content {
+    padding-top: 3rem;
+  }
+}
+@media (max-width: 576px) {
+  .container {
+    max-width: 90%;
+  }
+  .header-title {
+    font-size: 2rem;
+  }
+  .header-content {
+    padding-top: 2rem;
   }
 }
