--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
   background-image: url(../img/header-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center bottom -3.4375rem;
+  background-position: center bottom 0;
   position: relative;
 }
 .header-image:after {
@@ -80,20 +80,47 @@ body {
   height: 100%;
 }
 .header-nav {
-  flex-basis: 100%;
+  flex-grow: 1;
   display: flex;
+  align-items: center;
+  height: 100%;
   list-style: none;
   padding: 0;
   padding-left: 3.125rem;
   margin: 0;
 }
+.header-nav-item {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
 .header-nav-item:not(:last-child) {
   margin-right: 4%;
 }
 .header-nav-link {
+  display: flex;
+  height: 100%;
+  align-items: center;
   text-decoration: none;
   font-size: 1rem;
   color: inherit;
+  position: relative;
+}
+.header-nav-link:after {
+  content: "";
+  width: 0px;
+  height: 2px;
+  position: absolute;
+  bottom: -1;
+  background-color: #5c8ee6;
+  transition: width 0.2s;
+  right: 0;
+  left: auto;
+}
+.header-nav-link:hover:after {
+  width: 100%;
+  right: auto;
+  left: 0;
 }
 .header-phone {
   flex-shrink: 0;
@@ -261,6 +288,11 @@ body {
   height: 0.0625rem;
   background: #5c8ee6;
   width: 2.5rem;
+  margin-right: 1rem;
+  transition: width 0.2s;
+}
+.steps-link:hover:before {
+  width: 60px;
 }
 .steps-buttons {
   display: none;
@@ -276,6 +308,88 @@ body {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+.card {
+  text-decoration: none;
+  flex-basis: 33%;
+  border: 1px solid #ebebf0;
+  position: relative;
+  transition: border 0.2s;
+}
+.card:hover .card-title {
+  color: #5c8ee6;
+}
+.card:hover {
+  border-color: #5c8ee6;
+}
+.card-content {
+  padding: 2.5rem 3.125rem;
+}
+.card-title {
+  font-weight: 400;
+  font-size: 1.75rem;
+  line-height: 140%;
+  color: #292d33;
+  margin-top: 0;
+  margin-bottom: 0.625rem;
+  transition: color 0.2s;
+}
+.card-text {
+  font-size: 1rem;
+  line-height: 160%;
+  color: #828a99;
+  margin-bottom: 24.625rem;
+}
+.card-image {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 0;
+  width: 90%;
+}
+.cards2 {
+  display: flex;
+  flex-direction: row;
+}
+.card2 {
+  text-decoration: none;
+  flex-basis: 50%;
+  border: 1px solid #ebebf0;
+  position: relative;
+  transition: border 0.2s;
+}
+.card2:hover .card2-title {
+  color: #5c8ee6;
+}
+.card2:hover {
+  border-color: #5c8ee6;
+}
+.card2-content {
+  margin: 6.5625rem 5rem 3.125rem 17.5rem;
+}
+.card2-title {
+  font-weight: 400;
+  font-size: 1.75rem;
+  line-height: 140%;
+  color: #292d33;
+  margin-top: 0;
+  margin-bottom: 0.625rem;
+  transition: color 0.2s;
+}
+.card2-text {
+  font-size: 1rem;
+  line-height: 160%;
+  color: #828a99;
+  margin-bottom: 4.4375rem;
+  margin-right: 1.875rem;
+}
+.card2-image {
+  margin-top: 3.125rem;
+  padding: 30px 20px;
 }
 @media (max-width: 1700px) {
   html {
@@ -324,6 +438,9 @@ body {
   }
   .steps-buttons {
     display: flex;
+  }
+  .card {
+    flex-basis: 50%;
   }
 }
 @media (max-width: 992px) {
@@ -463,6 +580,9 @@ body {
   }
   .header-content {
     padding-top: 3rem;
+  }
+  .card {
+    flex-basis: 100%;
   }
 }
 @media (max-width: 576px) {
