--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,9 @@ body {
   .card {
     flex-basis: 50%;
   }
+  .card2 {
+    flex-basis: 100%;
+  }
 }
 @media (max-width: 992px) {
   html {
@@ -583,6 +586,10 @@ body {
   }
   .card {
     flex-basis: 100%;
+  }
+  .cards2 {
+    flex-basis: 100%;
+    flex-direction: column;
   }
 }
 @media (max-width: 576px) {
