--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,13 @@ body {
   fill: #292d33;
 }
 .header {
-  padding: 5.875rem;
+  padding: 2.4rem;
 }
 .header-image {
   background-image: url(../img/header-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center bottom 0;
+  background-position: left bottom 0.9375rem;
   position: relative;
 }
 .header-image:after {
@@ -162,7 +162,7 @@ body {
   height: 0.125rem;
 }
 .header-content {
-  padding-top: 9.375rem;
+  padding-top: 12.7rem;
   position: relative;
   z-index: 1;
   color: #fff;
@@ -172,7 +172,7 @@ body {
   font-family: "Bebas Neue Book";
   font-size: 5rem;
   line-height: 120%;
-  margin: 1.875rem 0;
+  margin: 1.7rem 0 2.1rem 0;
   letter-spacing: 0.8px;
   word-spacing: -1.6px;
 }
@@ -224,14 +224,16 @@ body {
   margin-top: 1.125rem;
 }
 .section {
-  margin-top: 9.375rem;
-  margin-bottom: 9.375rem;
+  margin-top: 6rem;
+  margin-bottom: 7rem;
 }
 .section-title {
   font-family: "Bebas Neue Book";
   font-size: 3.75rem;
   line-height: 120%;
   color: #292d33;
+  margin-top: 1.4rem;
+  margin-bottom: 2.5rem;
 }
 .steps {
   display: flex;
@@ -240,7 +242,7 @@ body {
   gap: 1.875rem;
 }
 .steps-item {
-  min-width: 20.625rem;
+  max-width: 20.625rem;
 }
 .steps-num {
   font-family: "Bebas Neue Book";
@@ -263,8 +265,10 @@ body {
   font-size: 1.75rem;
   line-height: 160%;
   color: hsl(216, 11%, 18%);
-  margin-top: 1.875rem;
+  margin-top: 2.1rem;
   margin-bottom: 0.625rem;
+  letter-spacing: 0.01rem;
+  word-spacing: 2rem;
 }
 .steps-text {
   font-weight: 400;
@@ -273,6 +277,7 @@ body {
   color: #828a99;
   margin-bottom: 1.25rem;
   margin-top: 0.625rem;
+  max-width: 18.75rem;
 }
 .steps-link {
   display: flex;
