--- a/css/style.css
+++ b/css/style.css
@@ -356,46 +356,56 @@ body {
   z-index: 0;
   width: 90%;
 }
-.cards2 {
+.trademark-cards {
   display: flex;
   flex-direction: row;
 }
-.card2 {
+.trademark-card {
   text-decoration: none;
   flex-basis: 50%;
   border: 1px solid #ebebf0;
-  position: relative;
   transition: border 0.2s;
+  padding: 3.125rem;
+  display: grid;
+  grid-template-columns: 180px 1fr;
+  grid-template-rows: auto 2fr;
+  grid-column-gap: 3.125rem;
+  grid-template-areas:
+    "logo title title"
+    "logo text text";
 }
-.card2:hover .card2-title {
-  color: #5c8ee6;
+.trademark-card-logo {
+  grid-area: logo;
+  fill: #828a99;
+  width: 100%;
 }
-.card2:hover {
-  border-color: #5c8ee6;
-}
-.card2-content {
-  margin: 6.5625rem 5rem 3.125rem 17.5rem;
-}
-.card2-title {
+.trademark-card-title {
   font-weight: 400;
+  margin: 0;
   font-size: 1.75rem;
-  line-height: 140%;
+  line-height: 160%;
   color: #292d33;
-  margin-top: 0;
-  margin-bottom: 0.625rem;
-  transition: color 0.2s;
+  grid-area: title;
 }
-.card2-text {
+.trademark-card-text {
+  font-style: normal;
+  font-weight: 400;
   font-size: 1rem;
   line-height: 160%;
   color: #828a99;
-  margin-bottom: 4.4375rem;
-  margin-right: 1.875rem;
+  grid-area: text;
+  margin-top: 0.625rem;
 }
-.card2-image {
-  margin-top: 3.125rem;
-  padding: 30px 20px;
+.trademark-card:hover {
+  border-color: #5c8ee6;
 }
+.trademark-card:hover .trademark-card-logo {
+  fill: #5c8ee6;
+}
+.trademark-card:hover .trademark-card-title {
+  color: #5c8ee6;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 14px;
@@ -447,8 +457,8 @@ body {
   .card {
     flex-basis: 50%;
   }
-  .card2 {
-    flex-basis: 100%;
+  .trademark-card {
+    grid-template-columns: auto auto;
   }
 }
 @media (max-width: 992px) {
@@ -578,6 +588,9 @@ body {
   .close-menu .mobile-menu-line:nth-child(3) {
     transform: rotate(-45deg) translateY(-9px);
   }
+  .trademark-cards {
+    flex-direction: column;
+  }
 }
 @media (max-width: 768px) {
   .container {
@@ -592,10 +605,6 @@ body {
   .card {
     flex-basis: 100%;
   }
-  .cards2 {
-    flex-basis: 100%;
-    flex-direction: column;
-  }
 }
 @media (max-width: 576px) {
   .container {
@@ -606,5 +615,10 @@ body {
   }
   .header-content {
     padding-top: 2rem;
+  }
+  .trademark-card {
+    grid-template-areas:
+      "logo title"
+      "text text";
   }
 }
