--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ body {
 }
 .section {
   margin-top: 6rem;
-  margin-bottom: 7rem;
+  margin-bottom: 6.5rem;
 }
 .section-title {
   font-family: "Bebas Neue Book";
@@ -233,7 +233,6 @@ body {
   line-height: 120%;
   color: #292d33;
   margin-top: 1.4rem;
-  margin-bottom: 2.5rem;
 }
 .steps {
   display: flex;
@@ -279,7 +278,7 @@ body {
   margin-top: 0.625rem;
   max-width: 18.75rem;
 }
-.steps-link {
+.button-link {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -288,7 +287,7 @@ body {
   line-height: 160%;
   color: #5c8ee6;
 }
-.steps-link:before {
+.button-link:before {
   content: "";
   height: 0.0625rem;
   background: #5c8ee6;
@@ -296,7 +295,7 @@ body {
   margin-right: 1rem;
   transition: width 0.2s;
 }
-.steps-link:hover:before {
+.button-link:hover:before {
   width: 60px;
 }
 .steps-buttons {
@@ -317,6 +316,7 @@ body {
 .cards {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 4rem;
 }
 .card {
   text-decoration: none;
@@ -340,21 +340,24 @@ body {
   line-height: 140%;
   color: #292d33;
   margin-top: 0;
-  margin-bottom: 0.625rem;
+  margin-bottom: -0.375rem;
   transition: color 0.2s;
 }
 .card-text {
   font-size: 1rem;
   line-height: 160%;
   color: #828a99;
-  margin-bottom: 24.625rem;
+  margin-bottom: 22rem;
+  word-spacing: 0.1rem;
+  letter-spacing: 0.05rem;
 }
 .card-image {
   position: absolute;
   bottom: 0;
   right: 0;
   z-index: 0;
-  width: 90%;
+  width: 98%;
+  height: 50%;
 }
 .trademark-cards {
   display: flex;
@@ -405,6 +408,73 @@ body {
 .trademark-card:hover .trademark-card-title {
   color: #5c8ee6;
 }
+.founder {
+  min-height: 41.25rem;
+  position: relative;
+}
+.founder-content {
+  max-width: 45rem;
+}
+.founder-photo {
+  position: absolute;
+  left: 0;
+  width: 40%;
+  top: 0;
+  height: 100%;
+  object-fit: cover;
+}
+.founder-conteent-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+.founder-text {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 160%;
+  color: #828a99;
+}
+.clients-wrapper {
+  display: flex;
+  gap: 3.125rem;
+}
+.clients-content {
+  flex-basis: 50%;
+}
+.clients-list {
+  list-style-type: none;
+  padding: 0;
+  columns: 2 auto;
+}
+.clients-list-item {
+  display: flex;
+  align-items: center;
+  gap: 1.25rem;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 160%;
+  color: #292d33;
+  padding: 1rem;
+}
+.clients-list-icon {
+  margin-right: 1.25rem;
+}
+.clients-logo-list {
+  flex-shrink: 10;
+  display: flex;
+  flex-wrap: wrap;
+}
+.client-logo-item {
+  flex-basis: 33%;
+  border: 1px solid #ebebf0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.clients-logo {
+  max-width: 100%;
+  width: 70px;
+  height: 70px;
+}
 
 @media (max-width: 1700px) {
   html {
@@ -442,7 +512,7 @@ body {
     display: none;
   }
   .navbar {
-    height: 5rem;
+    height: 7.1rem;
   }
   .navbar-button {
     padding-left: 2rem;
@@ -460,6 +530,12 @@ body {
   .trademark-card {
     grid-template-columns: auto auto;
   }
+  .founder-content {
+    max-width: 35rem;
+  }
+  .clients-content {
+    flex-basis: 60%;
+  }
 }
 @media (max-width: 992px) {
   html {
@@ -474,14 +550,22 @@ body {
   .header-logo {
     flex-grow: 1;
     justify-content: center;
+    border: none;
+  }
+  .logo-svg {
+    max-width: 10rem;
+  }
+  .navbar-button {
+    padding-left: 3.2rem;
+    padding-right: 3.2rem;
   }
   .mobile-menu-toggle {
-    width: 80px;
+    width: 100px;
     height: 100%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    padding: 1.8rem;
+    padding: 2.8rem 3.1rem;
     border-right: 1px solid rgba(235, 235, 240, 0.2);
   }
   .navbar-light .mobile-menu-line {
@@ -591,6 +675,9 @@ body {
   .trademark-cards {
     flex-direction: column;
   }
+  .clients-wrapper {
+    flex-direction: column;
+  }
 }
 @media (max-width: 768px) {
   .container {
@@ -605,20 +692,42 @@ body {
   .card {
     flex-basis: 100%;
   }
+  .founder-photo {
+    position: relative;
+    width: 100%;
+    margin-bottom: 3.125rem;
+  }
 }
 @media (max-width: 576px) {
   .container {
-    max-width: 90%;
+    max-width: 100%;
+  }
+  .header {
+    padding: 1.66rem;
   }
   .header-title {
-    font-size: 2rem;
+    font-size: 5rem;
   }
   .header-content {
-    padding-top: 2rem;
+    padding-top: 10.6rem;
+  }
+  .header-text {
+    max-width: 45rem;
+    font-size: 1.47rem;
+    line-height: 150%;
+    margin-bottom: 3.125rem;
+    word-spacing: 0.05rem;
+    letter-spacing: 0.01rem;
   }
   .trademark-card {
     grid-template-areas:
       "logo title"
       "text text";
+  }
+  .clients-list {
+    columns: 1;
+  }
+  .clients-logo-item {
+    flex-basis: 50%;
   }
 }
