--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ body {
   line-height: 120%;
   color: #292d33;
   margin-top: 1.4rem;
+  word-spacing: 0.5rem;
 }
 .steps {
   display: flex;
@@ -321,6 +322,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin-top: 4rem;
+  margin-bottom: 10rem;
 }
 .card {
   text-decoration: none;
@@ -366,6 +368,7 @@ body {
 .trademark-cards {
   display: flex;
   flex-direction: row;
+  margin-bottom: 13rem;
 }
 .trademark-card {
   text-decoration: none;
@@ -422,7 +425,7 @@ body {
 .founder-photo {
   position: absolute;
   left: 0;
-  width: 40%;
+  width: 44%;
   top: 0;
   height: 100%;
   object-fit: cover;
@@ -436,13 +439,14 @@ body {
   font-size: 1rem;
   line-height: 160%;
   color: #828a99;
+  margin-top: 6.3rem;
+  margin-bottom: 1.9rem;
 }
 .clients-wrapper {
   display: flex;
-  gap: 3.125rem;
 }
 .clients-content {
-  flex-basis: 50%;
+  flex-basis: 51%;
 }
 .clients-list {
   list-style-type: none;
@@ -537,6 +541,107 @@ body {
   align-items: center;
   margin-top: 1.875rem;
   justify-content: space-between;
+}
+.bg-grey {
+  background: #f0f2f5;
+}
+.section-cta {
+  position: relative;
+  padding-top: 6.25rem;
+  margin-top: 9.375rem;
+  padding-bottom: 6.25rem;
+}
+.cta-image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  max-width: 45rem;
+  width: 50%;
+}
+.cta-form-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+.cta-form {
+  max-width: 52.5rem;
+}
+.cta-form-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 160%;
+  color: #828a99;
+  margin-top: 1.375rem;
+  margin-bottom: 2.5rem;
+  max-width: 40rem;
+}
+.input-group-wrapper {
+  display: flex;
+  gap: 1.875rem;
+}
+.input-group {
+  position: relative;
+  height: 4.125rem;
+  flex-grow: 1;
+  background-color: #f0f2f5;
+}
+.input {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 1.25rem 1.875rem;
+  border: 1px solid #e4e4eb;
+  background-color: transparent;
+}
+.input-group-label {
+  position: absolute;
+  cursor: text;
+  top: 1.5rem;
+  left: 1.975rem;
+  font-weight: 400;
+  font-size: 16px;
+  color: #828a99;
+  transition: top 0.2s left 0.2s, font-size 0.2s;
+}
+.input:focus {
+  border: 1px solid #5c8ee6;
+  outline: 0;
+}
+.input:focus ~ .input-group-label,
+input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
+  top: -0.5rem;
+  left: 1.25rem;
+  font-size: 0.625rem;
+  background-color: inherit;
+  padding: 0 0.625rem;
+}
+.cta-form-footer {
+  display: flex;
+  align-items: center;
+  gap: 1.875rem;
+}
+.cta-form-button {
+  flex-shrink: 0;
+  margin-top: 1.875rem;
+}
+.notify {
+  display: flex;
+  align-items: flex-start;
+  gap: 0.625rem;
+}
+.notify-icon {
+  flex-shrink: 0;
+}
+.notify-text {
+  max-width: 23.75rem;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 160%;
+  color: #828a99;
+  margin: 0;
 }
 @media (max-width: 1700px) {
   html {
