--- a/css/style.css
+++ b/css/style.css
@@ -579,6 +579,10 @@ body {
   display: flex;
   gap: 1.875rem;
 }
+.input-group-vertical {
+  display: flex;
+  flex-direction: column;
+}
 .input-group {
   position: relative;
   height: 4.125rem;
@@ -593,7 +597,7 @@ body {
   left: 0;
   padding: 1.25rem 1.875rem;
   border: 1px solid #e4e4eb;
-  background-color: transparent;
+  background-color: inherit;
 }
 .input-group-label {
   position: absolute;
@@ -746,6 +750,79 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
   font-size: 0.75rem;
   line-height: 160%;
   color: inherit;
+}
+.modal {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateX(-100%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(40, 45, 51, 0.5);
+  z-index: 10;
+  display: flex;
+}
+.modal.is-open {
+  transform: translateX(0);
+  visibility: visible;
+  opacity: 1;
+}
+.modal.is-open .modal-dialog {
+  transform: translateY(0);
+  opacity: 1;
+}
+.modal-dialog {
+  background-color: #fff;
+  margin: auto;
+  max-width: 460px;
+  padding: 2.5rem 3.125rem;
+  position: relative;
+  transform: translateY(-10%);
+  opacity: 0;
+  transition: transform 0.3s, opacity 0.3s;
+}
+.modal-close {
+  display: block;
+  position: absolute;
+  top: 2.5rem;
+  right: 3.125rem;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ebebf0;
+}
+.modal-title {
+  font-family: "Bebas Neue Book";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 3rem;
+  line-height: 120%;
+  color: #292d33;
+  margin-top: 0;
+  margin-bottom: 1.25rem;
+}
+.modal-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 160%;
+  color: #828a99;
+  margin-bottom: 1.875rem;
+}
+.modal-input-group {
+  background-color: #fff;
+}
+.modal-form-footer {
+  margin-top: 30px;
+}
+.modal-form-button {
+  display: block;
+  width: 100%;
+  margin-bottom: 24px;
 }
 /* hover effects */
 @media (max-width: 1700px) {
