--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ body {
   width: 0px;
   height: 2px;
   position: absolute;
-  bottom: -1;
+  bottom: -1px;
   background-color: #5c8ee6;
   transition: width 0.2s;
   right: 0;
