add:  alert-modal

--- a/css/style.css
+++ b/css/style.css
@@ -640,6 +640,20 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
   background-color: inherit;
   padding: 0 0.625rem;
 }
+.input.is-invalid {
+  border: 1px solid red;
+}
+.input-validete-error-label {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  background-color: inherit;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  transform: translateY(-50%);
+  font-size: 0.8 rem;
+  display: inline-block;
+}
 .cta-form-footer {
   display: flex;
   align-items: center;
