--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html {
 @font-face {
   font-family: "Bebas Neue Book";
   src: url("../fonts/BebasNeueBook.woff") format("woff");
-
+  font-display: swap;
   font-weight: normal;
   font-style: normal;
 }
@@ -175,6 +175,85 @@ body {
   position: relative;
   z-index: 1;
   color: #fff;
+}
+.page-header {
+  padding-top: 9.375rem;
+  padding-bottom: 3.125rem;
+  color: #292d33;
+  position: relative;
+}
+.page-header-thumb {
+  position: absolute;
+  bottom: 0;
+  right: 10%;
+  max-width: 30rem;
+}
+.page-header-bg-image {
+  background-image: url("../img/blog-post.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #fff;
+}
+.page-header-bg-image:before {
+  content: "";
+  left: 0;
+  top: 0;
+  z-index: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(41, 45, 51, 0.6);
+}
+.page-header-bg-image .container {
+  position: relative;
+}
+.page-header-bg-grey {
+  background: #f0f2f5;
+}
+.page-header-titel {
+  font-family: "Bebas Neue Book";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 5rem;
+  line-height: 120%;
+  color: inherit;
+  margin-top: 1.875rem;
+  margin-bottom: 1.25rem;
+}
+.breadcrumbs {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  gap: 10px;
+}
+.breadcrumbs-link {
+  text-decoration: none;
+  color: inherit;
+}
+.breadcrumbs-link {
+  color: #828a99;
+}
+.breadcrumbs-item.active .breadcrumbs-link …{
+  color: #292d33;
+}
+.breadcrumbs-item:not(:last-child)::after {
+  content: "-";
+  margin-left: 10px;
+}
+.page-header-bg-image .breadcrumbs-link,
+.page-header-bg-image .breadcrumbs-item.active .breadcrumbs-link {
+  color: #fff;
+}
+.header-titel {
+  max-width: 67.5rem;
+  font-family: "Bebas Neue Book";
+  font-size: 5rem;
+  line-height: 120%;
+  margin: 1,875rem 0;
+  letter-spacing: 0,8px;
 }
 .header-title {
   max-width: 67.5rem;
@@ -867,6 +946,11 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
   width: 100%;
   margin-bottom: 24px;
 }
+.alert-modal-image {
+  max-height: 82px;
+}
+
+
 /* hover effects */
 @media (max-width: 1700px) {
   html {
@@ -1019,7 +1103,7 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
     color: #292d33;
   }
   .mobile-submenu {
-    list-style: none;
+    list-style-type: none;
     padding: 0;
     padding-left: 1rem;
     margin-top: 1rem;
@@ -1105,6 +1189,7 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
   .card {
     flex-basis: 100%;
   }
+  
 }
 @media (max-width: 576px) {
   .container {
