--- a/css/style.css
+++ b/css/style.css
@@ -988,7 +988,7 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
     display: none;
   }
   .navbar {
-    height: 7.1rem;
+    height: 5.8rem;
   }
   .navbar-button {
     padding-left: 2rem;
@@ -999,6 +999,9 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
   }
   .primary-buttons-wrapper {
     height: 2.5rem;
+  }
+  .primary-buttons-wrapper {
+    height: 40px;
   }
   .primary-button-prev,
   .primary-button-next {
@@ -1018,6 +1021,12 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
   }
   .clients-content {
     flex-basis: 60%;
+  }
+  .cta-image {
+    left: -10rem;
+  }
+  .footer-bottom {
+    margin-left: 2rem;
   }
 }
 @media (max-width: 992px) {
@@ -1039,16 +1048,16 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
     max-width: 10rem;
   }
   .navbar-button {
-    padding-left: 3.2rem;
-    padding-right: 3.2rem;
+    padding-left: 2.3rem;
+    padding-right: 2.3rem;
   }
   .mobile-menu-toggle {
-    width: 100px;
+    width: 80px;
     height: 100%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    padding: 2.5rem 2.8rem;
+    padding: 2.3rem 2.5rem;
     border-right: 1px solid rgba(235, 235, 240, 0.2);
   }
   .navbar-light .mobile-menu-line {
@@ -1161,20 +1170,22 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
   .clients-wrapper {
     flex-direction: column;
   }
-  .founder-photo {
-    position: relative;
-    width: 100%;
-    margin-bottom: 3.125rem;
-  }
   .cta-image {
-  position: relative;
+    height: 110%;
+    left: -17rem;
+}
+  .footer-menu-column-2 {
+    columns: 1;
+    min-width: 25rem;
+  
   }
-  .cta-form {
-   max-width: 32rem; 
-  }
+  
   .footer-phone {
     font-size: 1rem;
   }
+  .footer-logo {
+  margin-right: 1rem;
+}
 }
 @media (max-width: 768px) {
   .container {
@@ -1184,43 +1195,204 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
     font-size: 4rem;
   }
   .header-content {
-    padding-top: 3rem;
+    padding-top: 7.5rem;
+    margin-left: -2.5rem;
+  }
+  .cards {
+    margin-top: 2.6rem;
+    margin-bottom: 8rem;
+    }
+    .card {
+      height: 35.8rem;
+    }
+    .card-content {
+      padding: 1.3rem 2rem;
+    }
+    .card-text {
+      font-size: 1.1rem;
+    }
+  .blog-card {
+    flex-basis: 100%;
   }
   .card {
     flex-basis: 100%;
   }
-  
+  .founder-photo {
+    position: relative;
+    width: 100%;
+    margin-bottom: 3.125rem;
+  }
+  .cta-image {
+    display: none;
+  }
+  .cta-form-text {
+    font-size: 1.4rem;
+  }
+  .cta-form-footer {
+    display: block;
+  }
+  .input-group-wrapper {
+    display: block;
+  }
+  .input-group {
+    margin-bottom: 1rem;
+  }
+  .cta-form-button {
+    width: 100%;
+  }
+  .notify {
+    margin-top: 1rem;
+  }
+  .notify-text {
+    max-width: 100%;
+    font-size: 1.4rem;
+  }
+  .footer-top {
+    display: block;
+    margin-left: 0rem;
+  }
+  .footer-logo {
+    margin-left: 0;
+    margin-right: 38rem;
+  }
+  .footer-phone {
+    font-size: 2rem;
+  }
+  .footer-info {
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+  }
+  .footer-bottom {
+    display: block;
+    margin-left: 5rem;
+  }
+  .footer-menu-wrapper {
+    display: block;
+    margin-left: 0;
+  }
+  .footer-menu-title {
+    font-size: 1.3rem;
+    margin-left: -1rem;
+  }
+  .footer-menu-link {
+    font-size: 1.3rem;
+  }
+  .footer-menu-column-2 {
+    width: 100%;
+  }
+  .footer-menu-list {
+    margin-left: 0rem;
+  }
+  .footer-menu-link-bold {
+    margin-left: -12.4rem;
+  }
 }
 @media (max-width: 576px) {
   .container {
-    max-width: 100%;
-  }
-  .header {
-    padding: 1.66rem;
+    max-width: 90%;
   }
   .header-title {
-    font-size: 5rem;
-  }
-  .header-content {
-    padding-top: 10.6rem;
+  margin-bottom: -0.5rem;
   }
   .header-text {
-    max-width: 45rem;
-    font-size: 1.47rem;
-    line-height: 150%;
-    margin-bottom: 3.125rem;
-    word-spacing: 0.05rem;
-    letter-spacing: 0.01rem;
+    font-size: 1.2rem;
+    max-width: 30rem;
+    width: 110%;
+    margin-bottom: 2.4rem;
   }
+  .header-button {
+    padding: 1.625rem 3.75rem;
+    width: 110%;
+  }
+  .header-features {
+   margin-top: 4.2rem; 
+  }
+  .slider-buttons {
+    margin-top: -1.4rem;
+  }
+  .section-title {
+    font-size: 2.9rem;
+    margin-top: 1.8rem;
+    margin-bottom: 1.9rem; 
+}
+.steps-num {
+  font-size: 3.9rem;
+}
+.steps-title {
+  font-size: 1.6rem;
+  margin-top: 0.7rem;
+}
+.steps-text {
+  font-size: 1rem;
+  line-height: 170%;
+  margin-bottom: 2rem;
+}
+.button-link {
+  font-size: 1.4rem;
+}
+.steps-buttons {
+  margin-bottom: 1.9rem;
+  margin-top: -0.8rem;
+}
+.trademark-cards {
+  margin-top: -3rem;
+}
   .trademark-card {
     grid-template-areas:
       "logo title"
       "text text";
+      padding: 2.2rem 2.2rem;
+  }
+  .trademark-card-logo {
+    width: 150%;
+    margin-top: -2rem;
+  }
+  .trademark-card-title {
+    line-height: 130%;
+  }
+  .trademark-card-text {
+    font-size: 1.17rem;
+    margin-top: -0.6rem;
+    margin-bottom: 0;
+  }
+  .founder-text {
+    font-size: 1.15rem;
+    margin-top: -1rem;
   }
   .clients-list {
     columns: 1;
   }
-  .clients-logo-item {
+  .clients-list-item {
+    font-size: 1.18rem;
+    margin-bottom: -1.22rem;
+    margin-top: 2.5rem;
+  }
+  .client-logo-item {
     flex-basis: 50%;
+    min-height: 9rem;
+  }
+  .clients-logo {
+    width: 50px;
+    height: 50px;
+  }
+  .cta-form {
+  max-width: 29rem;
+  }
+  .input-group-wrapper {
+    display: block;
+  }
+  .notify {
+    margin-top: 1rem;
+  }
+  .footer-logo {
+    margin-right: 20rem;
+  }
+  .footer-menu-list {
+    margin-left: -3.3rem;
+  }
+  .footer-legal {
+    display: block;
   }
 }
+
+
